force-app/main/default/objects/Loan_Account__x/Loan_Account__x.object-meta.xml
<CustomObject>
    <description>Loan financial account</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>LoanAccount</externalName>
    <label>Loan Account</label>
    <pluralLabel>Loan Accounts</pluralLabel>
</CustomObject>