force-app/main/default/objects/Loan_Account__x/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Name attached to the product instance on CAP</description>
    <externalDeveloperName>AccountName</externalDeveloperName>
    <inlineHelpText>Name attached to the product instance on CAP</inlineHelpText>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>