force-app/main/default/objects/Loan_Account__x/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Unique Identifier of the Account</description>
    <externalDeveloperName>AccountNumber</externalDeveloperName>
    <inlineHelpText>Unique Identifier of the Account</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>