force-app/main/default/objects/Loan_Account__x/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Account status on CAP</description>
    <externalDeveloperName>AccountStatus</externalDeveloperName>
    <inlineHelpText>Account status on CAP</inlineHelpText>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>