force-app/main/default/objects/Loan_Account__x/fields/Amount_Advanced_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Advanced_To_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - Salesforce</complianceGroup>
    <description>This represents the amount of the loan that has been drawn down (for a Progress Draw loan and it’s not the same as the amount the loan is ahead in repayments.</description>
    <externalDeveloperName>AmountAdvancedToDate</externalDeveloperName>
    <label>Amount Advanced to Date ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>