force-app/main/default/objects/Loan_Account__x/fields/Amount_In_Advance__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_Advance__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Amount In Advance</description>
    <externalDeveloperName>AmountInAdvance</externalDeveloperName>
    <label>In Advance($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>