force-app/main/default/objects/Loan_Account__x/fields/ANZSIC_Code__c.field-meta.xml
<CustomField>
    <fullName>ANZSIC_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Industry classification</description>
    <externalDeveloperName>ANZSICCode</externalDeveloperName>
    <inlineHelpText>Industry classification</inlineHelpText>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>