force-app/main/default/objects/Loan_Account__x/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Balance Amount on ANZ source system</description>
    <externalDeveloperName>Balance</externalDeveloperName>
    <inlineHelpText>Balance Amount on ANZ source system</inlineHelpText>
    <label>Balance ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>