force-app/main/default/objects/Loan_Account__x/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Branch Name</description>
    <externalDeveloperName>BranchName</externalDeveloperName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>