force-app/main/default/objects/Loan_Account__x/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>CPID</description>
    <externalDeveloperName>CPID</externalDeveloperName>
    <label>CPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>