force-app/main/default/objects/Loan_Account__x/fields/Date_Loan_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Loan_Issued__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Date the account was opened</description>
    <externalDeveloperName>DateLoanIssued</externalDeveloperName>
    <inlineHelpText>Date the account was opened</inlineHelpText>
    <label>Date Opened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>