force-app/main/default/objects/Loan_Account__x/fields/DLP_Repayment_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>DLP_Repayment_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Loan repayment account number</description>
    <externalDeveloperName>DLPRepaymentAccountNumber</externalDeveloperName>
    <inlineHelpText>Loan repayment account number</inlineHelpText>
    <label>DLP Repayment Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>