force-app/main/default/objects/Loan_Account__x/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Expiry Date</description>
    <externalDeveloperName>Expires</externalDeveloperName>
    <label>Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>