force-app/main/default/objects/Loan_Account__x/fields/Fully_Drawn__c.field-meta.xml
<CustomField>
    <fullName>Fully_Drawn__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>If the loan has been fully drawn</description>
    <externalDeveloperName>FullyDrawn</externalDeveloperName>
    <inlineHelpText>If the loan has been fully drawn</inlineHelpText>
    <label>Fully Drawn</label>
    <type>Checkbox</type>
</CustomField>