force-app/main/default/objects/Loan_Account__x/fields/Grace_Days__c.field-meta.xml
<CustomField>
    <fullName>Grace_Days__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Grace Days</description>
    <externalDeveloperName>GraceDays</externalDeveloperName>
    <label>Grace Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>