force-app/main/default/objects/Loan_Account__x/fields/Index_Code_Current__c.field-meta.xml
<CustomField>
    <fullName>Index_Code_Current__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>The index type which will be the base interest rate (reference index rate)</description>
    <externalDeveloperName>IndexCodeCurrent</externalDeveloperName>
    <label>Index Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>