force-app/main/default/objects/Loan_Account__x/fields/Index_Code_Future__c.field-meta.xml
<CustomField>
    <fullName>Index_Code_Future__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Future Interest Details</description>
    <externalDeveloperName>IndexCodeFuture</externalDeveloperName>
    <label>Index Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>