force-app/main/default/objects/Loan_Account__x/fields/Index_Rate_Current__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate_Current__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Current Index Rate</description>
    <externalDeveloperName>IndexRateCurrent</externalDeveloperName>
    <label>Index Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>