force-app/main/default/objects/Loan_Account__x/fields/Index_Rate_Future__c.field-meta.xml
<CustomField>
    <fullName>Index_Rate_Future__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>BMI or Retail Index etc. Will include both the Value and the percentage, for example &apos;BMI - 6.12%&apos;</description>
    <externalDeveloperName>IndexRateFuture</externalDeveloperName>
    <label>Index Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>