force-app/main/default/objects/Loan_Account__x/fields/Interest_Charge_Method__c.field-meta.xml
<CustomField>
    <fullName>Interest_Charge_Method__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest charge type</description>
    <externalDeveloperName>InterestChargeMethod</externalDeveloperName>
    <inlineHelpText>Interest charge type</inlineHelpText>
    <label>Interest Charge Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>