force-app/main/default/objects/Loan_Account__x/fields/Interest_Only_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Expiry date of interest only term</description>
    <externalDeveloperName>InterestOnlyExpiryDate</externalDeveloperName>
    <inlineHelpText>Expiry date of interest only term</inlineHelpText>
    <label>Interest Only Expiry Date</label>
    <type>DateTime</type>
</CustomField>