force-app/main/default/objects/Loan_Account__x/fields/Interest_Only_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Repayment_Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Value changes every month for Interest only.</description>
    <externalDeveloperName>InterestOnlyRepaymentAmount</externalDeveloperName>
    <inlineHelpText>Value changes every month for Interest only.</inlineHelpText>
    <label>Repayment Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>