force-app/main/default/objects/Loan_Account__x/fields/Interest_Only_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Beginning date of Interest only term</description>
    <externalDeveloperName>InterestOnlyStartDate</externalDeveloperName>
    <inlineHelpText>Beginning date of Interest only term</inlineHelpText>
    <label>Interest Only Start Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>