force-app/main/default/objects/Loan_Account__x/fields/Interest_Only_Term_Month__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Term_Month__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest Only Term (Month)</description>
    <externalDeveloperName>InterestOnlyTermMonth</externalDeveloperName>
    <label>Interest Only Term (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>