force-app/main/default/objects/Loan_Account__x/fields/Interest_Only_Term_Year__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Term_Year__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest Only Term (Year)</description>
    <externalDeveloperName>InterestOnlyTermYear</externalDeveloperName>
    <label>Interest Only Term (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>