force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Expiry_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Interest Rate Expiry Date</description>
    <externalDeveloperName>InterestRateExpiryDate</externalDeveloperName>
    <label>Interest Rate Expiry Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>