force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Fixed_Rate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Fixed_Rate_Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest Rate - Fixed Rate Start Date</description>
    <externalDeveloperName>FixedRateStartDate</externalDeveloperName>
    <label>Fixed Rate Start Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>