force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Fixed_Rate_Term_Month__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Fixed_Rate_Term_Month__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest Rate - Fixed Rate Term (Month)</description>
    <externalDeveloperName>FixedRateTermMonth</externalDeveloperName>
    <label>Fixed Rate Term (Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>