force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Fixed_Rate_Term_Year__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Fixed_Rate_Term_Year__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest Rate - Fixed Rate Term (Year)</description>
    <externalDeveloperName>FixedRateTermYear</externalDeveloperName>
    <label>Fixed Rate Term (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>