force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Margin__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Margin__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Margin applied on base rate interest.</description>
    <externalDeveloperName>InterestRateMargin</externalDeveloperName>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>