force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Reference_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Reference_Index_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>BMI or Retail Index etc. Will include both the Value and the percentage, for example &apos;BMI - 6.12%&apos;</description>
    <externalDeveloperName>ReferenceIndexRate</externalDeveloperName>
    <inlineHelpText>BMI or Retail Index etc. Will include both the Value and the percentage, for example &apos;BMI - 6.12%&apos;</inlineHelpText>
    <label>Reference Index Rate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>