force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Reference_Index_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Reference_Index_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>The index type which will be the base interest rate (reference index rate)</description>
    <externalDeveloperName>ReferenceIndexType</externalDeveloperName>
    <inlineHelpText>The index type which will be the base interest rate (reference index rate)</inlineHelpText>
    <label>Reference Index Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>