force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Start_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Beginning date of Interest only term</description>
    <externalDeveloperName>InterestRateStartDate</externalDeveloperName>
    <label>Interest Rate Start Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>