force-app/main/default/objects/Loan_Account__x/fields/Interest_Rate_Term_Month__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Term_Month__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Interest Rate Term (Months)</description>
    <externalDeveloperName>InterestRateTermMonth</externalDeveloperName>
    <label>Interest Rate Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>