force-app/main/default/objects/Loan_Account__x/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Interest Type</description>
    <externalDeveloperName>InterestType</externalDeveloperName>
    <label>Interest Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>