force-app/main/default/objects/Loan_Account__x/fields/Interest_Type_Current__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type_Current__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Current Interest Type</description>
    <externalDeveloperName>InterestType</externalDeveloperName>
    <label>Interest Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>