force-app/main/default/objects/Loan_Account__x/fields/IO_Initial_Discount__c.field-meta.xml
<CustomField>
    <fullName>IO_Initial_Discount__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>IO Initial Discount</description>
    <externalDeveloperName>IOInitialDiscount</externalDeveloperName>
    <label>Initial Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>