force-app/main/default/objects/Loan_Account__x/fields/IO_Initial_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>IO_Initial_Interest_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>IO Initial Interest Rate</description>
    <externalDeveloperName>IOInitialInterestRate</externalDeveloperName>
    <label>Initial Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>