force-app/main/default/objects/Loan_Account__x/fields/IO_Interest_Frequency__c.field-meta.xml
<CustomField>
    <fullName>IO_Interest_Frequency__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>IO Interest Frequency</description>
    <externalDeveloperName>IOInterestFrequency</externalDeveloperName>
    <label>Interest Repayment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>