force-app/main/default/objects/Loan_Account__x/fields/IO_Interest_Repayment_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>IO_Interest_Repayment_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>IO Interest Repayment Account Number</description>
    <externalDeveloperName>IOInterestRepaymentAccountNumber</externalDeveloperName>
    <label>Interest Repayment Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>