force-app/main/default/objects/Loan_Account__x/fields/IO_Next_Repayment_Date__c.field-meta.xml
<CustomField>
    <fullName>IO_Next_Repayment_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>IO Next Repayment Date</description>
    <externalDeveloperName>IONextRepaymentDate</externalDeveloperName>
    <label>Next Repayment Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>