force-app/main/default/objects/Loan_Account__x/fields/IO_Subsequent_Discount__c.field-meta.xml
<CustomField>
    <fullName>IO_Subsequent_Discount__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>IO Subsquent Discount</description>
    <externalDeveloperName>IOSubsequentDiscount</externalDeveloperName>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>