force-app/main/default/objects/Loan_Account__x/fields/IO_Subsequent_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>IO_Subsequent_Interest_Rate__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>IO Subsequent Interest Date</description>
    <externalDeveloperName>IOSubsequentInterestRate</externalDeveloperName>
    <label>Rate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>