force-app/main/default/objects/Loan_Account__x/fields/Lenders_Mortgage_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Lenders_Mortgage_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Lenders Mortgage insurance</description>
    <externalDeveloperName>LendersMortgageInsurance</externalDeveloperName>
    <label>Lenders Mortgage Insurance (LMI)</label>
    <type>Checkbox</type>
</CustomField>