force-app/main/default/objects/Loan_Account__x/fields/Loan_Term_Year__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Year__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Loan Term Year</description>
    <externalDeveloperName>LoanTermYear</externalDeveloperName>
    <label>Loan Term (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>