force-app/main/default/objects/Loan_Account__x/fields/Offset_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Offset_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Linked offset account number for this loan</description>
    <externalDeveloperName>OffsetAccountNumber</externalDeveloperName>
    <inlineHelpText>Linked offset account number for this loan</inlineHelpText>
    <label>Offset Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>