force-app/main/default/objects/Loan_Account__x/fields/Original_Amount_Financed__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount_Financed__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Original Amount Financed</description>
    <externalDeveloperName>OriginalAmountFinanced</externalDeveloperName>
    <label>Amount Financed($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>