force-app/main/default/objects/Loan_Account__x/fields/PI_Initial_Repayment_Cycle_Day__c.field-meta.xml
<CustomField>
    <fullName>PI_Initial_Repayment_Cycle_Day__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>PI Initial Repayment Cycle Day</description>
    <externalDeveloperName>PIInitialRepaymentCycleDay</externalDeveloperName>
    <label>Initial Repayment Cycle Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>