force-app/main/default/objects/Loan_Account__x/fields/PI_Interest_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PI_Interest_Frequency__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>PI Interest Frequency</description>
    <externalDeveloperName>PIInterestFrequency</externalDeveloperName>
    <label>Interest Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>