force-app/main/default/objects/Loan_Account__x/fields/PI_Principal_Repayment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PI_Principal_Repayment_End_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>PI Principal Repayment End Date</description>
    <externalDeveloperName>PIPrincipalRepaymentEndDate</externalDeveloperName>
    <label>Principal Repayment End Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>