force-app/main/default/objects/Loan_Account__x/fields/PI_Principal_Repayment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PI_Principal_Repayment_Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>PI Principal Repayment Start Date</description>
    <externalDeveloperName>PIPrincipalRepaymentStartDate</externalDeveloperName>
    <label>Principal Repayment Start Date</label>
    <type>DateTime</type>
</CustomField>