force-app/main/default/objects/Loan_Account__x/fields/PI_Repayment_Amount__c.field-meta.xml
<CustomField>
    <fullName>PI_Repayment_Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>PI Repayment Amount</description>
    <externalDeveloperName>PIRepaymentAmount</externalDeveloperName>
    <label>Repayment Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>