force-app/main/default/objects/Loan_Account__x/fields/Progress_Draw_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Progress_Draw_Expiry_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Expiry date of a progressive draw loan</description>
    <externalDeveloperName>ProgressDrawExpiryDate</externalDeveloperName>
    <inlineHelpText>Expiry date of a progressive draw loan</inlineHelpText>
    <label>Progress Draw Expiry Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>