force-app/main/default/objects/Loan_Account__x/fields/Purpose_Code__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Purpose Code</description>
    <externalDeveloperName>PurposeCode</externalDeveloperName>
    <label>Purpose Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>