force-app/main/default/objects/Loan_Account__x/fields/Redraw_Amount__c.field-meta.xml
<CustomField>
    <fullName>Redraw_Amount__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Redraw Amount</description>
    <externalDeveloperName>RedrawAmount</externalDeveloperName>
    <label>Redraw Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>