force-app/main/default/objects/Loan_Account__x/fields/Redraw_Number_of_Signatories__c.field-meta.xml
<CustomField>
    <fullName>Redraw_Number_of_Signatories__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <description>Redraw Number of Signatories</description>
    <externalDeveloperName>RedrawNumberofSignatories</externalDeveloperName>
    <label>Redraw Number of Signatories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>