force-app/main/default/objects/Loan_Account__x/fields/Redraw_Registration__c.field-meta.xml
<CustomField>
    <fullName>Redraw_Registration__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Salesforce;Privacy_Personal_Information</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Redraw Registration</description>
    <externalDeveloperName>RedrawRegistration</externalDeveloperName>
    <label>Redraw Registration</label>
    <type>Checkbox</type>
</CustomField>